<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:orderInCategory="1"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/status_gallery"
            android:orderInCategory="2"
            android:title="@string/status_gallery"
            android:icon="@drawable/ic_image"/>



    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_2">


        <item android:title="@string/privacy_policy"
        android:icon="@drawable/ic_privacy"
        android:id="@+id/privacy_policy"
        android:orderInCategory="4"/>

        <item android:title="@string/rate"
            android:icon="@drawable/ic_rate"
            android:id="@+id/rating"
            android:orderInCategory="5"/>



    </group>

</menu>